--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,9 @@
-six==1.15.0
 altgraph==0.17
-certifi==2020.12.5
-chardet==4.0.0
-idna==2.10
+appdirs==1.4.4
+distlib==0.3.1
+filelock==3.0.12
 macholib==1.14
-nose==1.3.7
-numpy==1.20.0
-pygame==2.0.1
 pyinstaller==4.2
 pyinstaller-hooks-contrib==2020.11
-requests==2.25.1
-timeutil==2.1.0
-urllib3==1.26.3
-altgraph==0.17
-certifi==2020.12.5
-chardet==4.0.0
-idna==2.10
-macholib==1.14
-nose==1.3.7
-numpy==1.20.0
-pygame==2.0.1
-pyinstaller==4.2
-pyinstaller-hooks-contrib==2020.11
-requests==2.25.1
 six==1.15.0
-timeutil==2.1.0
-urllib3==1.26.3
+virtualenv==20.4.2
